@@ -8,6 +8,7 @@ Bugs closed in this release:
 705499     "include-filelist-stdin" not implemented on version 0.6.11
 739438     [PATCH] Local backend should always try renaming instead of copying
 761688     Difference found: File X has permissions 666, expected 666
+507904     Cygwin: Full Backup fails with "IOError: [Errno 13] Permission denied"
 
 
 New in v0.6.13 (2011/04/02)
